[package]
name = "dsp_tester"
version = "0.1.0"
edition = "2021"

[dependencies]
rodio = "0.15"  # For audio playback
eframe = "0.25"  # For GUI with egui and windowing
egui = "0.25"  # Egui itself
parking_lot = "0.12"
nalgebra = "0.29.0"
rand = "0.8.5"
iir_filters = "0.1.3"
rustfft = "6.2.0"
dasp_ring_buffer = "0.11"
log = "0.4"
psutil = { version = "3.3.0", default-features = false, features = ["cpu", "process"] }
nix = "0.29"

[features]
simd = []

[package.metadata]
rustc-flags = "-C target-cpu=native"